--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "divaloper",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Apenas uma CLI para você me conhecer melhor :)",
   "main": "index.js",
   "scripts": {
     "test": "node src/index.js"
@@ -39,5 +39,6 @@
     "ink-gradient": "^0.1.1",
     "ink-select-input": "^2.0.0",
     "opn": "^5.4.0"
-  }
+  },
+  "devDependencies": {}
 }
